feat(catalog): secure internal commands and improve OpenAPI